# MCP-Central

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: release-image.yml
docs/: server-manifest.md
docs/examples/: firefly-iii-manifest.json  fireflyiii-mcp-daften.json
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx
frontend/src/components/ui/: card.tsx  (+4 more)
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: ApiKeys.tsx  Dashboard.tsx  Endpoints.tsx  Groups.tsx  Login.tsx  Logs.tsx  Servers.tsx  Upload.tsx
frontend/src/store/: auth.ts
frontend/src/test/: namespace.test.ts  utils.test.ts
hub/: __init__.py  config.py  database.py  logging_setup.py  main.py
hub/api/: auth.py  config.py  groups.py  keys.py  logs.py  responses.py  servers.py  stats.py  upload.py
hub/auth/: __init__.py  admin.py  api_keys.py
hub/mcp/: __init__.py  namespace.py  proxy.py  router.py
hub/migrations/: env.py
hub/models/: __init__.py  api_key.py  base.py  group.py  log_entry.py  server.py  tool_call.py
hub/process/: __init__.py  health.py  manager.py  sandbox.py  tinyproxy.py
tests/: conftest.py
tests/e2e/: test_api_keys.py  test_auth.py  test_config.py  test_logs.py  test_mcp_proxy.py  test_servers_api.py  test_upload.py
tests/unit/: test_auth.py  test_models.py  test_process_manager.py  test_sandbox.py
(+8 files in other folders)
